--- a/applications/kustomize.yaml
+++ b/applications/kustomize.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - vm-template.yaml
+  - RHEL-9_2-VM_deployment.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -18,6 +18,14 @@ patchesStrategicMerge:
     metadata:
       name: my-vm-0
     spec:
+      interval: 10m
+      path: "./"
+      prune: true
+      sourceRef:
+        kind: GitRepository
+        name: my-repo
+        namespace: default
+      validation: client
       template:
         spec:
           domain:
