--- a/applications/kustomize.yaml
+++ b/applications/kustomize.yaml
@@ -1,14 +1,77 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  name: my-kustomization
-  namespace: default
-spec:
-  interval: 10m
-  path: "./"
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: my-repo
-    namespace: default
-  validation: client
+resources:
+  - RHEL-9_2-VM_deployment.yaml
+
+generatorOptions:
+  disableNameSuffixHash: true
+
+configMapGenerator:
+  - name: vm-count
+    literals:
+      - vmCount=10
+
+patchesStrategicMerge:
+  - |-
+    apiVersion: kubevirt.io/v1
+    kind: VirtualMachine
+    metadata:
+      name: my-vm-0
+    spec:
+      running: true
+      instancetype:
+        name: u1.medium
+      preference:
+        name: rhel.9
+      dataVolumeTemplates:
+        - metadata:
+            name: my-vm-0-volume
+          spec:
+            sourceRef:
+              kind: DataSource
+              name: rhel9
+              namespace: openshift-virtualization-os-images
+            storage:
+              resources:
+                requests:
+                  storage: '32212254720'
+              storageClassName: sc-gold
+      template:
+        metadata:
+          labels:
+            network.kubevirt.io/headlessService: headless
+        spec:
+          domain:
+            devices:
+              autoattachPodInterface: false
+              disks:
+              - name: rootdisk
+                dataVolume:
+                  name: my-vm-0-volume
+              - name: cloudinitdisk
+                cloudInitNoCloud:
+                  userData: |
+                    #cloud-config
+                    chpasswd:
+                      expire: false
+                    password: o8af-owof-vxr8
+                    user: rhel
+          interfaces:
+            - name: bridge
+              model: virtio
+          networks:
+            - name: {}
+              pod: {}
+          volumes:
+            - name: rootdisk
+              dataVolume:
+                name: my-vm-0-volume
+            - name: cloudinitdisk
+              cloudInitNoCloud:
+                userData: |
+                  #cloud-config
+                  chpasswd:
+                    expire: false
+                  password: o8af-owof-vxr8
+                  user: rhel
+          subdomain: headless
