--- a/applications/kustomize.yaml
+++ b/applications/kustomize.yaml
@@ -1,4 +1,4 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 resources:
   - RHEL-9_2-VM_deployment.yaml
@@ -43,7 +43,7 @@ patchesStrategicMerge:
         spec:
           domain:
             devices:
-              autoattachPodInterface: false
+              autoattachPodInterface: true
               disks:
               - name: rootdisk
                 dataVolume:
