--- a/applications/RHEL-9_2-VM_deployment.yaml
+++ b/applications/RHEL-9_2-VM_deployment.yaml
@@ -62,7 +62,7 @@ spec:
     name: rhel.9
   dataVolumeTemplates:
   - metadata:
-      name: rhel9-dv
+      name: rhel9-dv2
     spec:
       sourceRef:
         kind: DataSource
